--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Node", "Node", "Home")</li>
                     <li>@Html.ActionLink("Bambora", "Bambora", "Home")</li>
+                    <li>@Html.ActionLink("BamboraSession", "BamboraSession", "Home")</li>
                 </ul>
             </div>
         </div>
